# IPP

./: README.md
simple_Window/: CMakeLists.txt
simple_Window/src/: main.cpp
triangle/: CMakeLists.txt  triangle.pro
triangle/src/: main.cpp
